--- a/src/components/Root/index.scss
+++ b/src/components/Root/index.scss
@@ -36,6 +36,7 @@ body{
     height: 100%;
     min-height: 100vh;
     margin-right: 160px;
+    position: relative;
 
     .title-container{
         display: flex;
@@ -97,6 +98,7 @@ body{
             min-width: 100%;
             width: 100%;
             max-width: 100%;
+            position: initial;
         }
 
         .content-container{
